minor validation changes

--- a/eauction-seller/src/main/resources/application.properties
+++ b/eauction-seller/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.topic=eauction.bid
 
-validation.seller.fname.short=Seller first name length should be greater than 5
-validation.seller.fname.long=Seller first name length should be lesser than 30
-validation.seller.lname.short=Seller last name length should be greater than 5
-validation.seller.lname.long=Seller last name length should be lesser than 25
-validation.phone.length=Phone number length should be 10
+validation.seller.fname.length=Seller first name length should be between 5-30
+validation.seller.lname.length=Seller last name length should be between 3-25
+validation.seller.phone.length=Phone number length should be 10
+
 validation.product.name.length=Product name length should be between 5-30
+validation.product.price.format=Starting Price name length should be a number
