--- a/eauction-buyer/pom.xml
+++ b/eauction-buyer/pom.xml
@@ -8,7 +8,7 @@
 		<groupId>com.fse3.eauction</groupId>
 		<artifactId>eauction-app</artifactId>
 		<version>1.0.0</version>
-		<relativePath />
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>eauction-buyer</artifactId>
