--- a/eauction-buyer/src/main/resources/application.properties
+++ b/eauction-buyer/src/main/resources/application.properties
@@ -9,10 +9,8 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.topic=eauction.bid
 
-validation.buyer.fname.short=Buyer first name length should be greater than 5
-validation.buyer.fname.long=Buyer first name length should be lesser than 30
-validation.buyer.lname.short=Buyer last name length should be greater than 5
-validation.buyer.lname.long=Buyer last name length should be lesser than 25
+validation.buyer.fname.length=Buyer first name length should be between 5-30
+validation.buyer.lname.length=Buyer last name length should be between 3-25
+validation.buyer.phone.length=Phone number length should be 10
 
-validation.phone.length=Phone number length should be 10
 validation.product.name.length=Product name length should be between 5-30
