--- a/eauction-seller/pom.xml
+++ b/eauction-seller/pom.xml
@@ -80,4 +80,14 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+	<build>
+    	<finalName>eauction-seller</finalName>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-maven-plugin</artifactId>
+	        </plugin>
+	    </plugins>
+	</build>
 </project>
