--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,18 @@ services:
   zookeeper:
     image: 'bitnami/zookeeper:latest'
     ports:
-      - '2181:9092'
+      - '2181:2181'
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       
   kafka:
     image: 'bitnami/kafka:latest'
     ports:
-      - '9092:8082'
+      - '9092:9092'
     environment:
       - KAFKA_BROKER_ID=1
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
@@ -26,7 +26,7 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
     ports:
-      - '6379:8082'
+      - '6379:6379'
       
   buyer_svc:
     image: 'mainakdalui/buyer-svc-imgdock:v1'
@@ -41,7 +41,7 @@ services:
       - redis
       
   seller_svc:
-    image: 'mainakdalui/seller-svc-imgdock:latest'
+    image: 'mainakdalui/seller-svc-imgdock:v1'
     build: ./eauction-seller/
     container_name: seller-svc-condock
     restart: always
