--- a/eauction-seller/src/main/resources/application.properties
+++ b/eauction-seller/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8081
 spring.application.name=SELLER SERVICE
 
-spring.data.redis.hostname=localhost
+spring.data.redis.hostname=redis
 spring.data.redis.port=6379
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.topic=eauction.bid
 
 validation.seller.fname.length=Seller first name length should be between 5-30
